force-app/main/objects/Bureau_Rating_Progress__c.object
<CustomObject>
    <description>Bureau module</description>
    <fields>
        <fullName>Bureau_Product__c</fullName>
        <label>Managed Services Product</label>
        <referenceTo>Bureau_Product__c</referenceTo>
        <relationshipLabel>Managed Services Ratings Progress</relationshipLabel>
        <relationshipName>Bureau_Ratings_Progresss</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bureau_Rating__c</fullName>
        <label>Managed Services Rating</label>
        <referenceTo>Bureau_Rating__c</referenceTo>
        <relationshipLabel>Managed Services Ratings Progress</relationshipLabel>
        <relationshipName>Bureau_Ratings_Progress</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rater__c</fullName>
        <formula>Bureau_Rating__r.Respondent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Managed Services Rating Progress</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRP{0000000000}</displayFormat>
        <label>Rating Progress Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Managed Services Ratings Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>